<resources>
    <string name="app_name">Native</string>
    <string name="enter">Войти</string>
    <string name="regist">Зарегестрироваться</string>
    <string name="famy">FAMY</string>
    <string name="grany">GRANY</string>
    <string name="reg">Вы можете зарегистрироваться как</string>
    <string name="fon">Это фоновое изображение</string>
    <string name="pic">Картинка</string>
    <string name="nasad">Вернуться назад</string>
    <string name="nat">Native</string>
    <string name="next">Далее</string>
    <string name="check">Введите и подтвердите номер телефона</string>
    <string name="number">Номер телефона</string>
    <string name="sent_cod">Прислать код в смс</string>
    <string name="cod">Код</string>
    <string name="nul"> </string>
    <string name="helping">С чем вы можете помочь?</string>
    <string name="check_number">Ваш номер подтвержден</string>
    <string name="create">Придумайте или введите пароль:</string>
    <string name="pass2">Повторите пароль:</string>
    <string name="ank_title">Заполните анкету о себе</string>
    <string name="name">Имя и фамилия</string>
    <string name="surname">Фамилия</string>
    <string name="age">Возраст</string>
    <string name="phone">Телефон</string>
    <string name="email">Введите Email:</string>
    <string name="infa">Немного о себе</string>
    <string name="add">Добавить фото</string>
    <string name="zapyataya">, </string>
    <string name="problem">Что у Вас вызывает трудности?</string>
    <string name="enter2">Вход в аккаунт</string>
    <string name="password">Введите пароль:</string>
    <string name="lst">Список</string>
    <string name="empty">Нет данных</string>
    <string name="forgot">Забыли пароль?</string>
    <string name="recovery">Восстановление пароля</string>
    <string name="entnum">Введите номер телефона</string>
    <string name="list">список возможностей</string>
    <string name="num">+7</string>
    <string name="title_activity_main">Main</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Главная</string>
    <string name="menu_calendar">Календарь</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>