<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/fon"
        android:layout_width="407dp"
        android:layout_height="801dp"
        android:contentDescription="@string/fon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/forgot" />

    <ImageButton
        android:id="@+id/arrow"
        android:layout_width="25dp"
        android:layout_height="15dp"
        android:layout_marginStart="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="44dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/nasad"
        app:srcCompat="@drawable/arrow" />

    <Button
        android:id="@+id/next"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="105dp"
        android:layout_height="50dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginBottom="64dp"
        android:text="@string/next"
        android:textColor="@color/text"
        android:textSize="16sp"
        app:backgroundTint="#C4C4C4"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/recovery"
        android:layout_width="256dp"
        android:layout_height="37dp"
        android:text="@string/recovery"
        android:textColor="@color/text"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.264"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.226" />

    <TextView
        android:id="@+id/enternum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="228dp"
        android:text="@string/entnum"
        android:textColor="@color/text"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.234"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/number"
        android:layout_width="307dp"
        android:layout_height="48dp"
        android:layout_marginTop="276dp"
        android:contentDescription="@string/pic"
        app:layout_constraintBaseline_toBaselineOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.394"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/btn2" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="272dp"
        android:layout_height="45dp"
        android:layout_marginTop="276dp"
        android:autoLink="phone"
        android:autofillHints=""
        android:contentDescription="@string/number"
        android:ems="0"
        android:inputType="phone"
        android:lineSpacingExtra="0sp"
        android:text="@string/number"
        android:textColor="@color/dop_text"
        app:layout_constraintBaseline_toBaselineOf="parent"
        app:layout_constraintEnd_toEndOf="@id/number"
        app:layout_constraintHorizontal_bias="0.285"
        app:layout_constraintStart_toStartOf="@id/number"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="340dp"
        android:layout_weight="1"
        android:fontFamily="sans-serif-light"
        android:text="@string/sent_cod"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/text"
        android:textSize="20sp"
        app:backgroundTint="#00000000"
        app:layout_constraintBaseline_toBaselineOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.197"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/cod"
        android:layout_width="90dp"
        android:layout_height="45dp"
        android:layout_marginTop="340dp"
        android:contentDescription="@string/pic"
        app:layout_constraintBaseline_toBaselineOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.806"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/btnlittle" />

    <EditText
        android:id="@+id/cod_str"
        android:layout_width="73dp"
        android:layout_height="37dp"
        android:layout_marginTop="344dp"
        android:layout_weight="1"
        android:contentDescription="@string/cod"
        android:ems="10"
        android:fontFamily="serif-monospace"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:text="@string/cod"
        android:textColor="@color/dop_text"
        android:textSize="18sp"
        android:typeface="normal"
        app:layout_constraintBaseline_toBaselineOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.795"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>