<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/fon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/fon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/check_number" />

    <ImageButton
        android:id="@+id/arrow"
        android:layout_width="25dp"
        android:layout_height="15dp"
        android:layout_marginStart="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="44dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/nasad"
        app:srcCompat="@drawable/arrow" />

    <Button
        android:id="@+id/next"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="105dp"
        android:layout_height="50dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginBottom="64dp"
        android:text="@string/next"
        android:textColor="@color/text"
        android:textSize="16sp"
        app:backgroundTint="#C4C4C4"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/check"
        android:layout_width="314dp"
        android:layout_height="31dp"
        android:layout_marginTop="144dp"
        android:text="@string/check"
        android:textColor="@color/text"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/number"
        android:layout_width="315dp"
        android:layout_height="47dp"
        android:layout_marginTop="192dp"
        app:layout_constraintBaseline_toBaselineOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/btn2"
        android:contentDescription="@string/pic"/>

    <EditText
        android:id="@+id/phone"
        android:layout_width="274dp"
        android:layout_height="41dp"
        android:layout_marginTop="196dp"
        android:autoLink="phone"
        android:autofillHints=""
        android:ems="0"
        android:inputType="phone"
        android:lineSpacingExtra="0sp"
        android:text="@string/number"
        android:textColor="@color/dop_text"
        app:layout_constraintBaseline_toBaselineOf="parent"
        app:layout_constraintEnd_toEndOf="@id/number"
        app:layout_constraintHorizontal_bias="0.536"
        app:layout_constraintStart_toStartOf="@id/number"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/number"/>

    <Button
        android:id="@+id/sent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="280dp"
        android:layout_weight="1"
        android:fontFamily="sans-serif-light"
        android:text="@string/sent_cod"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/text"
        android:textSize="20sp"
        app:backgroundTint="#00000000"
        app:layout_constraintBaseline_toBaselineOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.235"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/cod"
        android:layout_width="90dp"
        android:layout_height="45dp"
        android:layout_marginTop="280dp"
        app:layout_constraintBaseline_toBaselineOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.847"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/btnlittle"
        android:contentDescription="@string/pic"/>

    <EditText
        android:id="@+id/cod_str"
        android:layout_width="67dp"
        android:layout_height="39dp"
        android:layout_marginTop="284dp"
        android:layout_weight="1"
        android:ems="10"
        android:fontFamily="serif-monospace"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:text="@string/cod"
        android:textColor="@color/dop_text"
        android:textSize="18sp"
        android:typeface="normal"
        app:layout_constraintBaseline_toBaselineOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.828"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/cod"/>

</androidx.constraintlayout.widget.ConstraintLayout>