<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/fon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/fon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/anketa" />

    <ImageButton
        android:id="@+id/arrow"
        android:layout_width="25dp"
        android:layout_height="15dp"
        android:layout_marginStart="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="44dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/nasad"
        app:srcCompat="@drawable/arrow" />

    <Button
        android:id="@+id/SignUp"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="105dp"
        android:layout_height="50dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginBottom="64dp"
        android:text="@string/next"
        android:textColor="@color/text"
        android:textSize="16sp"
        app:backgroundTint="#C4C4C4"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/checking"
        android:layout_width="283dp"
        android:layout_height="43dp"
        android:layout_marginTop="96dp"
        android:text="@string/ank_title"
        android:textColor="@color/text"
        android:textSize="22sp"
        app:layout_constraintBaseline_toBaselineOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.351"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/name"
        android:layout_width="320dp"
        android:layout_height="42dp"
        android:layout_marginTop="160dp"
        android:contentDescription="@string/pic"
        app:layout_constraintBaseline_toBaselineOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/btn3" />

    <EditText
        android:id="@+id/ed_name"
        android:layout_width="290dp"
        android:layout_height="42dp"
        android:layout_marginTop="163dp"
        android:ems="10"
        android:hint="@string/name"
        android:textSize="20sp"
        android:inputType="text"
        android:textColorHint="@color/text"
        app:layout_constraintBaseline_toBaselineOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/age_img"
        android:layout_width="320dp"
        android:layout_height="42dp"
        android:layout_marginTop="212dp"
        android:contentDescription="@string/pic"
        app:layout_constraintBaseline_toBaselineOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/btn3" />

    <EditText
        android:id="@+id/ed_age"
        android:layout_width="290dp"
        android:layout_height="42dp"
        android:layout_marginTop="215dp"
        android:ems="10"
        android:textSize="20sp"
        android:inputType="number"
        android:hint="@string/age"
        android:textColorHint="@color/text"
        app:layout_constraintBaseline_toBaselineOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/infa_img"
        android:layout_width="320dp"
        android:layout_height="42dp"
        android:layout_marginTop="264dp"
        android:contentDescription="@string/pic"
        app:layout_constraintBaseline_toBaselineOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/btn3" />

    <EditText
        android:id="@+id/ed_inf"
        android:layout_width="290dp"
        android:layout_height="42dp"
        android:layout_marginTop="267dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/infa"
        android:textColorHint="@color/text"
        app:layout_constraintBaseline_toBaselineOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="20sp"/>

    <ImageView
        android:id="@+id/help_img"
        android:layout_width="320dp"
        android:layout_height="42dp"
        android:layout_marginTop="316dp"
        android:contentDescription="@string/pic"
        app:layout_constraintBaseline_toBaselineOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/btn3" />

    <EditText
        android:id="@+id/ed_help"
        android:layout_width="290dp"
        android:layout_height="42dp"
        android:layout_marginTop="319dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/problem"
        android:textColorHint="@color/text"
        app:layout_constraintBaseline_toBaselineOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="20sp"/>


    <ImageButton
        android:id="@+id/add_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="392dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/add"
        app:layout_constraintBaseline_toBaselineOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.144"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/add_photo" />


</androidx.constraintlayout.widget.ConstraintLayout>